--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,54 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+### C++ ###
+# Prerequisites
+*.d
 
-# C extensions
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
 *.so
+*.dylib
+*.dll
 
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+# Fortran module files
+*.mod
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Executables
+*.exe
+*.out
+*.app
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
+# CodeLite IDE
+*.mk
+*.project
+*.txt
+.codelite/
+*.workspace
+Makefile
 
-# Translations
-*.mo
-*.pot
+### macOS ###
+*.DS_Store
 
-# Django stuff:
+### VS Code ###
+.vscode/
+
+### LaTeX ###
+*.aux
+*.bbl
+*.blg
 *.log
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
+*.synctex.gz
+*.bib
